# protobuf-convert

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs  pb_convert.rs
tests/: pb_convert.rs
tests/proto/: .gitignore  message.proto  mod.rs
