[package]
name = "protobuf-convert"
version = "0.1.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>", "Witnet Foundation <info@witnet.foundation>"]
repository = "https://github.com/witnet/protobuf-convert"
documentation = "https://docs.rs/protobuf-convert"
license = "Apache-2.0"
keywords = ["protobuf", "macro"]
categories = ["development-tools"]
description = "Macros for convenient serialization of Rust data structures into/from Protocol Buffers"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

