[package]
name = "protobuf-convert"
version = "0.3.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>", "Witnet Foundation <info@witnet.foundation>"]
repository = "https://github.com/witnet/protobuf-convert"
documentation = "https://docs.rs/protobuf-convert"
license = "Apache-2.0"
keywords = ["protobuf", "macro"]
categories = ["development-tools"]
description = "Macros for convenient serialization of Rust data structures into/from Protocol Buffers"

[lib]
proc-macro = true

[dependencies]
darling = "0.10.2"
heck = "0.3.1"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
semver = "0.9"

[dev-dependencies]
anyhow = "1.0"
protobuf = "2.8.1"
serde = { version = "1.0.102", features = ["derive"] }

[build-dependencies]
protoc-rust = "2.8.1"
