[package]
name = "protobuf-convert"
version = "0.5.0"
edition = "2021"
authors = ["The Exonum Team <exonum@bitfury.com>", "Witnet Foundation <info@witnet.foundation>"]
repository = "https://github.com/witnet/protobuf-convert"
documentation = "https://docs.rs/protobuf-convert"
license = "Apache-2.0"
keywords = ["protobuf", "macro"]
categories = ["development-tools"]
description = "Macros for convenient serialization of Rust data structures into/from Protocol Buffers"

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
heck = "0.4"
proc-macro2 = "1"
quote = "1"
semver = "1"
serde = { version = "1", features = [ "derive" ] }
syn = "1"

[dev-dependencies]
anyhow = "1"
protobuf = "3"

[build-dependencies]
protobuf-codegen = "3"
